fix box appearing when tapping on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@
     padding: 0;
 }
 
+*:active {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0);
+}
+
 body {
     display: flex;
     height: 100svh;
@@ -33,7 +38,7 @@ h1 {
 main {
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
 }
 
 .choices {
@@ -89,17 +94,20 @@ main {
     cursor: pointer;
 }
 
-button:hover,
-.choices>div:hover {
-    background: var(--hover-bg);
-    transform: scale(95%);
-    transition: .4s;
+@media (hover: hover) {
+
+    button:hover,
+    .choices>div:hover {
+        background: var(--hover-bg);
+        transform: scale(95%);
+        transition: .4s;
+    }
 }
 
 button.active,
 button:active,
-.choices>div:active
-.choices>div.active {
+.choices>div.active,
+.choices>div:active {
     background: var(--fg);
     color: var(--bg);
 }
